--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -21,16 +21,16 @@
 				<div id="header">
 
 					<!-- Logo -->
-						<h1><a href="index.html" id="logo">Arcana <em>by HTML5 UP</em></a></h1>
+						<div id="main-banner"></div>
 
 					<!-- Nav -->
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Conference Program</a>
+									<a href="Program.html">Conference Program</a>
 									<ul>
-										<li><a href="#">Program &amp; Events</a></li>
+										<li><a href="Program.html">Program &amp; Events</a></li>
 										<li><a href="#">Schedule</a></li>
 										<li><a href="#">Plenary Speakers</a></li>
 										<li><a href="#">Steering Committee</a></li>
