--- a/index.html
+++ b/index.html
@@ -30,9 +30,9 @@
 							<ul>
 								<li class="current"><a href="index.html">Home</a></li>
 								<li>
-									<a href="#">Conference Program</a>
+									<a href="Program.html">Conference Program</a>
 									<ul>
-										<li><a href="#">Program &amp; Events</a></li>
+										<li><a href="Program.html">Program &amp; Events</a></li>
 										<li><a href="#">Schedule</a></li>
 										<li><a href="#">Plenary Speakers</a></li>
 										<li><a href="#">Steering Committee</a></li>
@@ -89,14 +89,14 @@
 							</section>
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
-									<i class="icon major fa-pencil"></i>
+									<i class="icon major"></i>
 									<h3>CALL FOR SPONSORS</h3>
 									<p>Sponsorship of specific events within the conference (meals, reception, etc.) as well as the entire conference are available. Companies and individuals interested in participating as a sponsor should contact Benjamin Eynon, Sponsorship Chair, at b.eynon@samsung.com</p>
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
-									<i class="icon major fa-wrench"></i>
+									<i class="icon major"></i>
 									<h3>Paper Submission</h3>
 									<p>Abstracts and papers should be submitted online at http://TexasSymposium.org</p>
 									<p><a href="https://cmt3.research.microsoft.com/User/Login">Click Here</a> to submit paper </p>
@@ -110,14 +110,18 @@
 				<section class="wrapper style2">
 					<div class="container">
 						<header class="major">
-							<h2>A gigantic heading you can use for whatever</h2>
-							<p>With a much smaller subtitle hanging out just below it</p>
+							<h2>Call for Papers
+								<h3>2017 Texas Symposium on Wireless &amp; Microwave Circuits &amp; Systems</h3>
+								<h3> March 30-31 Baylor University, Waco, Texas</h3>
+							</h2>
+
+							<p><a href="http://www.profdong.com/WMCS/">2017 Conference Registration </a></p>
 						</header>
 					</div>
 				</section>
 
 			<!-- Posts -->
-				<section class="wrapper style1">
+				<!-- <section class="wrapper style1">
 					<div class="container">
 						<div class="row">
 							<section class="6u 12u(narrower)">
@@ -160,7 +164,7 @@
 							</section>
 						</div>
 					</div>
-				</section>
+				</section> -->
 
 			<!-- CTA -->
 				<section id="cta" class="wrapper style3">
@@ -183,9 +187,6 @@
 									<li><a href="https://cmt3.research.microsoft.com/User/Login">Submit Paper</a></li>
 									<li><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium^wcocy%60TSGTSGA%60115.00%60USD%60false%603%603/30/16%604/2/16%603/9/16&app=resvlink&stop_mobi=yes">Conference Lodging</a></li>
 									<li><a href="http://texassymposium.org/files/TexasSymposiumAgenda_2016.pdf">Conference Program</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
 								</ul>
 							</section>
 							<section class="3u 6u$(narrower) 12u$(mobilep)">
@@ -194,10 +195,6 @@
 									<li><a href="http://www.baylor.edu/">Baylor University</a></li>
 									<li><a href="http://www.waco-texas.com/">Waco, Texas</a></li>
 									<li><a href="http://www.texasoutside.com/topten/waco.html">Things to do in Waco</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
 								</ul>
 							</section>
 							<section class="6u 12u(narrower)">
@@ -240,7 +237,7 @@
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>© 2016 Texas Symposium. All rights reserved.</li>
 							</ul>
 						</div>
 
