--- a/index.html
+++ b/index.html
@@ -36,11 +36,13 @@
 										<li><a href="#">Schedule</a></li>
 										<li><a href="#">Plenary Speakers</a></li>
 										<li><a href="#">Steering Committee</a></li>
+										<li><a href="#">Photo Gallery</a></li>
 									</ul>
 								</li>
 								<li><a href="left-sidebar.html">Author Toolkit</a></li>
 								<li><a href="right-sidebar.html">Registration</a></li>
 								<li><a href="two-sidebar.html">Travel &amp; Stay</a></li>
+								<li><a href="no-sidebar.html">Sponsors</a></li>
 								<li><a href="no-sidebar.html">Contact Us</a></li>
 							</ul>
 						</nav>
