home page changes
More changes to home page and the banner, added new content to the page

--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
 								<li><a href="left-sidebar.html">Author Toolkit</a></li>
 								<li><a href="right-sidebar.html">Registration</a></li>
 								<li><a href="two-sidebar.html">Travel &amp; Stay</a></li>
-								<li><a href="no-sidebar.html">Sponsors</a></li>
+								<li><a href="Sponsors.html">Sponsors</a></li>
 								<li><a href="no-sidebar.html">Contact Us</a></li>
 							</ul>
 						</nav>
@@ -52,26 +52,31 @@
 			<!-- Banner -->
 				<section id=conf-section >
 					<div class="conf-content">
-						<p>The steering committee invites paper submissions for the 2017 conference, to be held on the beautiful campus of Baylor University in Waco, Texas. Papers will be archived and published in the conference proceedings and at IEEE Xplore.  Paper submissions in all areas of wireless and microwave circuits and systems are welcome. Topics of interest include, but are not limited to, the following:</p>
-
+						<p></p>
+						<p>The Texas Symposium on Wireless and Microwave Circuits and Systems conference committee invites paper submissions for the 2017 conference, to be held on the beautiful campus of Baylor University in Waco, Texas, on March 30-31, 2017. <br/>
+						Authors from the industry and academia are invited to submit four-page papers of their original and previously unpublished work.  Paper submissions in all areas of wireless and microwave circuits and systems are welcome.  Topics of interest include:</p>
 							<ul>
-								<li>• RF and microwave circuits, devices, modeling, testing, and measurement </li>
-								<li>• Radar and sensing </li>
-								<li>• Antennas, propagation, and electromagnetics </li>
-								<li>• Microwave applied metrology</li>
-								<li>• Wireless power transfer</li>
-								<li>• Electromagnetic materials and modeling</li>
-								<li>• Wireless or optical communication</li>
-								<li>• Wireless technologies for biomedical applications</li>
-								<li>• Internet of Things</li>
-								<li>• Emerging wireless technologies</li>
+								<li>• &nbsp;	RF and microwave circuits and systems  </li>
+								<li>• &nbsp;	Devices, modeling, testing and measurement techniques </li>
+								<li>• &nbsp;	5G and millimeter-wave wireless technologies</li>
+								<li>• &nbsp;	Spectrum management and coexistence </li>
+								<li>• &nbsp;	Radar and sensing</li>
+								<li>• &nbsp;	Antennas, propagation, and electromagnetics</li>
+								<li>• &nbsp;	Microwave applied metrology</li>
+								<li>• &nbsp;	Wireless power transfer</li>
+								<li>• &nbsp;	Electromagnetic materials and modeling</li>
+								<li>• &nbsp;	Wireless or optical communications </li>
+								<li>• &nbsp;	Photonics</li>
+								<li>• &nbsp;	Wireless technologies for biomedical applications</li>
+								<li>• &nbsp;	Internet of Things</li>
+								<li>• &nbsp;	Emerging wireless technologies</li>
 							</ul>
-
+							<p>Published papers will be archived will the IEEE Xplore®, and a student-best-paper-award will be awarded to offset registration and travel costs.</p>
 					</div>
 				</section>
 					<section  id="banner" >
 					<header>
-						<h2>Conference Program: <em>Agenda and Technical Program</em></h2>
+						<h2>Conference Program:&nbsp; <em>Agenda and Technical Program</em></h2>
 						<a href="http://texassymposium.org/files/TexasSymposiumAgenda_2016.pdf" class="button">Learn More</a>
 					</header>
 				</section>
@@ -82,25 +87,25 @@
 						<div class="row 200%">
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
-									<i class="icon major"></i>
+									<i class="icon major round-cal-img"></i>
 									<h3>Important Dates</h3>
-										<p><b>February 13, 2016</b>  <br/>Full Paper Submission Deadline</p>
-										<p><b>February 26, 2016</b> <br/>Author Notifications</p>
-										<p><b>March 6, 2016</b> <br/>Final Paper Submission</p>
+										<p><b>January 31, 2017</b>  <br/>Full Paper Submission Deadline</p>
+										<p><b>February 26, 2017</b> <br/>Author Notifications</p>
+										<p><b>March 10, 2017</b> <br/>Final Paper Submission</p>
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
-									<i class="icon major"></i>
+									<i class="icon major round-paper-call-img"></i>
 									<h3>CALL FOR SPONSORS</h3>
-									<p>Sponsorship of specific events within the conference (meals, reception, etc.) as well as the entire conference are available. Companies and individuals interested in participating as a sponsor should contact Benjamin Eynon, Sponsorship Chair, at b.eynon@samsung.com</p>
+									<p>Companies and individuals interested in sponsoring specific aspects of the conference should contact Charles Baylis at Charles_Baylis@baylor.edu</p>
 								</div>
 							</section>
 							<section class="4u 12u(narrower)">
 								<div class="box highlight">
-									<i class="icon major"></i>
+									<i class="icon major round-submit-img"></i>
 									<h3>Paper Submission</h3>
-									<p>Abstracts and papers should be submitted online at http://TexasSymposium.org</p>
+									<p>Conference website for more information and for submission of papers and abstracts and papers should be submitted online at http://TexasSymposium.org</p>
 									<p><a href="https://cmt3.research.microsoft.com/User/Login">Click Here</a> to submit paper </p>
 								</div>
 							</section>
@@ -110,12 +115,14 @@
 
 			<!-- Gigantic Heading -->
 				<section class="wrapper style2">
-					<div class="container">
+					<!-- <div class="callPaperTxt"> -->
+						<div class="container">
 						<header class="major">
-							<h2>Call for Papers
-								<h3>2017 Texas Symposium on Wireless &amp; Microwave Circuits &amp; Systems</h3>
-								<h3> March 30-31 Baylor University, Waco, Texas</h3>
-							</h2>
+						<!-- <header id="callPaperBlueBontBanner"> -->
+							<h2>Call for Papers</h2>
+								<h3>2017 Texas Symposium on Wireless &amp; Microwave Circuits &amp; Systems <br/>
+								 March 30 - 31<br/>
+								 Baylor University, Waco, Texas</h3>
 
 							<p><a href="http://www.profdong.com/WMCS/">2017 Conference Registration </a></p>
 						</header>
@@ -231,8 +238,7 @@
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
-							<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
+						  <li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 						</ul>
 
