--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -40,7 +40,7 @@
 								<li><a href="left-sidebar.html">Author Toolkit</a></li>
 								<li><a href="right-sidebar.html">Registration</a></li>
 								<li><a href="two-sidebar.html">Travel &amp; Stay</a></li>
-								<li><a href="no-sidebar.html">Sponsors</a></li>
+								<li><a href="Sponsors.html">Sponsors</a></li>
 								<li class="current"><a href="no-sidebar.html">Contact Us</a></li>
 							</ul>
 						</nav>
