--- a/SteeringCommittee.html
+++ b/SteeringCommittee.html
@@ -27,7 +27,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li>
+								<li class="current">
 									<a href="Program.html">Conference Program</a>
 									<ul>
 										<li><a href="Program.html">Program &amp; Events</a></li>
@@ -40,7 +40,7 @@
 								<li><a href="left-sidebar.html">Author Toolkit</a></li>
 								<li><a href="right-sidebar.html">Registration</a></li>
 								<li><a href="two-sidebar.html">Travel &amp; Stay</a></li>
-								<li class="current"><a href="Sponsors.html">Sponsors</a></li>
+								<li><a href="Sponsors.html">Sponsors</a></li>
 								<li><a href="no-sidebar.html">Contact Us</a></li>
 							</ul>
 						</nav>
@@ -56,33 +56,42 @@
 
 								<article>
 									<header>
-										<h2>No Sidebar</h2>
-										<p>All content, all the time.</p>
+										<h2>Steering Committee</h2>
+
 									</header>
 
-									<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
+									<span class="image featured"><img src="images/TexasBlueBonettLndscp.jpg" alt="" height="400px"/></span>
+<p>
+									<h3>General Chair</h3>
 
-									<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-									Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-									Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
-									consequat etiam lorem ipsum dolor sit amet nullam.</p>
+                  Oren Eliezer, PHAZR
+                  <h3>Technical Program Chair</h3>
+                  Taylor Barton, University of Colorado
+                  <h3>Technical Program Co-Chairs</h3>
+                  Bryant Baker, Qorvo
+                  Yang Li, Baylor University
+                  <h3>Local Arrangements and Exhibitors Chair</h3>
+                  Charles Baylis, Baylor University
+                  <h3>Registration Chair</h3>
+                  Liang Dong, Baylor University
+                  <h3>Publicity Chairs</h3>
+                  Donald Lie, Texas Tech University
+                  Rashaunda Henderson, University of Texas at Dallas
+                  <h3>Sponsors and Exhibitors Chairs</h3>
+                  Benjamin Eynon, Samsung
+                  Charles Baylis, Baylor University
+                  <h3>Student Posters and Presentations Chair</h3>
+                  David Jackson, University of Houston
+                  <h3>Publications Chair</h3>
+                  Terrance Blake, Texas Instruments (retired)
+                  <h3>Organization Chair</h3>
+                  Robert J. Marks II, Baylor University
+                  <h3>Conference Advisor</h3>
+                  Randall Jean, Baylor University
+                  <h3>Webmaster</h3>
+                  Ruchi Rawal, Copart
+            </p>
 
-									<h3>And Yet Another Subheading</h3>
-									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
-									justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
-									ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
-									vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
-									Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
-									rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
-									Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
-									Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
-
-									<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
-									quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
-									Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
-									fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
-									Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
-									Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
 								</article>
 
 						</div>
@@ -149,7 +158,6 @@
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 						</ul>
