--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -33,7 +33,7 @@
 										<li><a href="Program.html">Program &amp; Events</a></li>
 										<li><a href="#">Schedule</a></li>
 										<li><a href="#">Plenary Speakers</a></li>
-										<li><a href="#">Steering Committee</a></li>
+										<li><a href="SteeringCommittee.html">Steering Committee</a></li>
 										<li><a href="#">Photo Gallery</a></li>
 									</ul>
 								</li>
