Fixed quick links

--- a/SteeringCommittee.html
+++ b/SteeringCommittee.html
@@ -102,28 +102,21 @@
 				<div id="footer">
 					<div class="container">
 						<div class="row">
-							<section class="3u 6u(narrower) 12u$(mobilep)">
-								<h3>Links to Stuff</h3>
+              <section class="3u 6u(narrower) 12u$(mobilep)">
+								<h3>Quick Links</h3>
 								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
+									<li><a href="http://www.profdong.com/WMCS/">Registration</a></li>
+									<li><a href="https://cmt3.research.microsoft.com/User/Login">Submit Paper</a></li>
+									<li><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium^wcocy%60TSGTSGA%60115.00%60USD%60false%603%603/30/16%604/2/16%603/9/16&app=resvlink&stop_mobi=yes">Conference Lodging</a></li>
+									<li><a href="http://texassymposium.org/files/TexasSymposiumAgenda_2016.pdf">Conference Program</a></li>
 								</ul>
 							</section>
 							<section class="3u 6u$(narrower) 12u$(mobilep)">
-								<h3>More Links to Stuff</h3>
+								<h3>More Information</h3>
 								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
+									<li><a href="http://www.baylor.edu/">Baylor University</a></li>
+									<li><a href="http://www.waco-texas.com/">Waco, Texas</a></li>
+									<li><a href="http://www.texasoutside.com/topten/waco.html">Things to do in Waco</a></li>
 								</ul>
 							</section>
 							<section class="6u 12u(narrower)">
