Added remaining pages

--- a/Contact.html
+++ b/Contact.html
@@ -6,8 +6,8 @@
 -->
 <html>
 	<head>
-    <link rel="icon"  type="image/png" href="images/TxSymposiumLogo.png"/>
-		<title>Texas Symposium - Steering Committee</title>
+		<link rel="icon"  type="image/png" href="images/TxSymposiumLogo.png"/>
+		<title>Texas Symposium</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -28,7 +28,7 @@
 						<nav id="nav">
 							<ul>
 								<li><a href="index.html">Home</a></li>
-								<li class="current">
+								<li>
 									<a href="Program.html">Conference Program</a>
 									<ul>
 										<li><a href="Program.html">Program &amp; Events</a></li>
@@ -42,7 +42,7 @@
 								<li><a href="Registration.html">Registration</a></li>
 								<li><a href="Travel-Stay.html">Travel &amp; Stay</a></li>
 								<li><a href="Sponsors.html">Sponsors</a></li>
-								<li><a href="Contact.html">Contact Us</a></li>
+								<li class="current"><a href="Contact.html">Contact Us</a></li>
 							</ul>
 						</nav>
 
@@ -57,42 +57,33 @@
 
 								<article>
 									<header>
-										<h2>Steering Committee</h2>
-
+										<h2>No Sidebar</h2>
+										<p>All content, all the time.</p>
 									</header>
 
-									<span class="image featured"><img src="images/TexasBlueBonettLndscp.jpg" alt="" height="400px"/></span>
-<p>
-									<h3>General Chair</h3>
+									<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
 
-                  Oren Eliezer, PHAZR
-                  <h3>Technical Program Chair</h3>
-                  Taylor Barton, University of Colorado
-                  <h3>Technical Program Co-Chairs</h3>
-                  Bryant Baker, Qorvo
-                  Yang Li, Baylor University
-                  <h3>Local Arrangements and Exhibitors Chair</h3>
-                  Charles Baylis, Baylor University
-                  <h3>Registration Chair</h3>
-                  Liang Dong, Baylor University
-                  <h3>Publicity Chairs</h3>
-                  Donald Lie, Texas Tech University
-                  Rashaunda Henderson, University of Texas at Dallas
-                  <h3>Sponsors and Exhibitors Chairs</h3>
-                  Benjamin Eynon, Samsung
-                  Charles Baylis, Baylor University
-                  <h3>Student Posters and Presentations Chair</h3>
-                  David Jackson, University of Houston
-                  <h3>Publications Chair</h3>
-                  Terrance Blake, Texas Instruments (retired)
-                  <h3>Organization Chair</h3>
-                  Robert J. Marks II, Baylor University
-                  <h3>Conference Advisor</h3>
-                  Randall Jean, Baylor University
-                  <h3>Webmaster</h3>
-                  Ruchi Rawal, Copart
-            </p>
+									<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
+									Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
+									Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis nisi
+									consequat etiam lorem ipsum dolor sit amet nullam.</p>
 
+									<h3>And Yet Another Subheading</h3>
+									<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
+									justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
+									ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
+									vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
+									Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
+									rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
+									Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
+									Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
+
+									<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
+									quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
+									Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
+									fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
+									Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
+									Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
 								</article>
 
 						</div>
@@ -103,7 +94,7 @@
 				<div id="footer">
 					<div class="container">
 						<div class="row">
-              <section class="3u 6u(narrower) 12u$(mobilep)">
+							<section class="3u 6u(narrower) 12u$(mobilep)">
 								<h3>Quick Links</h3>
 								<ul class="links">
 									<li><a href="http://www.profdong.com/WMCS/" target="_blank">Registration</a></li>
@@ -152,6 +143,7 @@
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
+							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 						</ul>
@@ -159,7 +151,7 @@
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-							<li>© 2016 Texas Symposium. All rights reserved.</li>
+								<li>© 2016 Texas Symposium. All rights reserved.</li>
 							</ul>
 						</div>
 
