--- a/Program.html
+++ b/Program.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Program</title>
+    <link rel="icon"  type="image/png" href="images/TxSymposiumLogo.png"/>
+		<title>Texas Symposium - Program</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -31,17 +32,17 @@
 									<a href="Program.html">Conference Program</a>
 									<ul>
 										<li><a href="Program.html">Program &amp; Events</a></li>
-										<li><a href="#">Schedule</a></li>
-										<li><a href="#">Plenary Speakers</a></li>
+										<li><a href="Schedule.html">Schedule</a></li>
+										<li><a href="Speakers.html">Plenary Speakers</a></li>
 										<li><a href="SteeringCommittee.html">Steering Committee</a></li>
-                    <li><a href="#">Photo Gallery</a></li>
+                    <li><a href="PhotoGallery.html">Photo Gallery</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Author Toolkit</a></li>
-								<li><a href="right-sidebar.html">Registration</a></li>
-								<li><a href="two-sidebar.html">Travel &amp; Stay</a></li>
+								<li><a href="AuthorToolkit.html">Author Toolkit</a></li>
+								<li><a href="Registration.html">Registration</a></li>
+								<li><a href="Travel-Stay.html">Travel &amp; Stay</a></li>
                 <li><a href="Sponsors.html">Sponsors</a></li>
-								<li><a href="no-sidebar.html">Contact Us</a></li>
+								<li><a href="Contact.html">Contact Us</a></li>
 							</ul>
 						</nav>
 
@@ -171,7 +172,7 @@ Co-Chair: Oren Eliezer, University of Texas at Dallas
 3:40 Realizing THz CMOS Vision Through Efficient Signal Generation Techniques (Invited)
 Zeshan Ahmad, Kenneth O, University of Texas at Dallas
 4:00 Comprehensive Adaptive Tuning of Silicon RF Photonic Filters
-Shengchang Cai, Samuel Palermo, Texas A&M University
+Shengchang Cai, Samuel Palermo
 4:20 Student Poster Awards
 4:40 Conference Concludes</p>
 								</article>
@@ -187,18 +188,18 @@ Shengchang Cai, Samuel Palermo, Texas A&M University
               <section class="3u 6u(narrower) 12u$(mobilep)">
 								<h3>Quick Links</h3>
 								<ul class="links">
-									<li><a href="http://www.profdong.com/WMCS/">Registration</a></li>
-									<li><a href="https://cmt3.research.microsoft.com/User/Login">Submit Paper</a></li>
-									<li><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium^wcocy%60TSGTSGA%60115.00%60USD%60false%603%603/30/16%604/2/16%603/9/16&app=resvlink&stop_mobi=yes">Conference Lodging</a></li>
-									<li><a href="http://texassymposium.org/files/TexasSymposiumAgenda_2016.pdf">Conference Program</a></li>
+									<li><a href="http://www.profdong.com/WMCS/" target="_blank">Registration</a></li>
+									<li><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></li>
+									<li><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium^wcocy%60TSGTSGA%60115.00%60USD%60false%603%603/30/16%604/2/16%603/9/16&amp;app=resvlink&amp;stop_mobi=yes" target="_blank">Conference Lodging</a></li>
+									<li><a href="http://texassymposium.org/files/TexasSymposiumAgenda_2016.pdf" target="_blank">Conference Program</a></li>
 								</ul>
 							</section>
 							<section class="3u 6u$(narrower) 12u$(mobilep)">
 								<h3>More Information</h3>
 								<ul class="links">
-									<li><a href="http://www.baylor.edu/">Baylor University</a></li>
-									<li><a href="http://www.waco-texas.com/">Waco, Texas</a></li>
-									<li><a href="http://www.texasoutside.com/topten/waco.html">Things to do in Waco</a></li>
+									<li><a href="http://www.baylor.edu/" target="_blank">Baylor University</a></li>
+									<li><a href="http://www.waco-texas.com/" target="_blank">Waco, Texas</a></li>
+									<li><a href="http://www.texasoutside.com/topten/waco.html" target="_blank">Things to do in Waco</a></li>
 								</ul>
 							</section>
 							<section class="6u 12u(narrower)">
@@ -233,7 +234,6 @@ Shengchang Cai, Samuel Palermo, Texas A&M University
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 						</ul>
