--- a/Schedule.html
+++ b/Schedule.html
@@ -7,7 +7,7 @@
 <html>
 	<head>
     <link rel="icon"  type="image/png" href="images/TxSymposiumLogo.png"/>
-		<title>Texas Symposium - Steering Committee</title>
+		<title>Texas Symposium - Schedule</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -57,42 +57,11 @@
 
 								<article>
 									<header>
-										<h2>Steering Committee</h2>
-
+										<h2>Conference Schedule</h2>
 									</header>
 
 									<span class="image featured"><img src="images/TexasBlueBonettLndscp.jpg" alt="" height="400px"/></span>
-<p>
-									<h3>General Chair</h3>
-
-                  Oren Eliezer, PHAZR
-                  <h3>Technical Program Chair</h3>
-                  Taylor Barton, University of Colorado
-                  <h3>Technical Program Co-Chairs</h3>
-                  Bryant Baker, Qorvo
-                  Yang Li, Baylor University
-                  <h3>Local Arrangements and Exhibitors Chair</h3>
-                  Charles Baylis, Baylor University
-                  <h3>Registration Chair</h3>
-                  Liang Dong, Baylor University
-                  <h3>Publicity Chairs</h3>
-                  Donald Lie, Texas Tech University
-                  Rashaunda Henderson, University of Texas at Dallas
-                  <h3>Sponsors and Exhibitors Chairs</h3>
-                  Benjamin Eynon, Samsung
-                  Charles Baylis, Baylor University
-                  <h3>Student Posters and Presentations Chair</h3>
-                  David Jackson, University of Houston
-                  <h3>Publications Chair</h3>
-                  Terrance Blake, Texas Instruments (retired)
-                  <h3>Organization Chair</h3>
-                  Robert J. Marks II, Baylor University
-                  <h3>Conference Advisor</h3>
-                  Randall Jean, Baylor University
-                  <h3>Webmaster</h3>
-                  Ruchi Rawal, Copart
-            </p>
-
+                    <p></p>
 								</article>
 
 						</div>
