--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 -->
 <html>
 	<head>
+		<link rel="icon"  type="image/png" href="images/TxSymposiumLogo.png"/>
 		<title>Texas Symposium</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
@@ -33,17 +34,17 @@
 									<a href="Program.html">Conference Program</a>
 									<ul>
 										<li><a href="Program.html">Program &amp; Events</a></li>
-										<li><a href="#">Schedule</a></li>
-										<li><a href="#">Plenary Speakers</a></li>
+										<li><a href="Schedule.html">Schedule</a></li>
+										<li><a href="Speakers.html">Plenary Speakers</a></li>
 										<li><a href="SteeringCommittee.html">Steering Committee</a></li>
-										<li><a href="#">Photo Gallery</a></li>
+										<li><a href="PhotoGallery.html">Photo Gallery</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Author Toolkit</a></li>
-								<li><a href="right-sidebar.html">Registration</a></li>
-								<li><a href="two-sidebar.html">Travel &amp; Stay</a></li>
+								<li><a href="AuthorToolkit.html">Author Toolkit</a></li>
+								<li><a href="Registration.html">Registration</a></li>
+								<li><a href="Travel-Stay.html">Travel &amp; Stay</a></li>
 								<li><a href="Sponsors.html">Sponsors</a></li>
-								<li><a href="no-sidebar.html">Contact Us</a></li>
+								<li><a href="Contact.html">Contact Us</a></li>
 							</ul>
 						</nav>
 
@@ -106,7 +107,7 @@
 									<i class="icon major round-submit-img"></i>
 									<h3>Paper Submission</h3>
 									<p>Conference website for more information and for submission of papers and abstracts and papers should be submitted online at http://TexasSymposium.org</p>
-									<p><a href="https://cmt3.research.microsoft.com/User/Login">Click Here</a> to submit paper </p>
+									<p><a href="https://cmt3.research.microsoft.com/TXWMCS2017/">Click Here</a> to submit paper </p>
 								</div>
 							</section>
 						</div>
@@ -180,7 +181,7 @@
 					<div class="container">
 						<header>
 							<h2>Are you ready to submit your paper?</h2>
-							<a href="https://cmt3.research.microsoft.com/User/Login" class="button">Click Here</a>
+							<a href="https://cmt3.research.microsoft.com/TXWMCS2017/" class="button">Click Here</a>
 						</header>
 					</div>
 				</section>
@@ -192,18 +193,18 @@
 							<section class="3u 6u(narrower) 12u$(mobilep)">
 								<h3>Quick Links</h3>
 								<ul class="links">
-									<li><a href="http://www.profdong.com/WMCS/">Registration</a></li>
-									<li><a href="https://cmt3.research.microsoft.com/User/Login">Submit Paper</a></li>
-									<li><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium^wcocy%60TSGTSGA%60115.00%60USD%60false%603%603/30/16%604/2/16%603/9/16&app=resvlink&stop_mobi=yes">Conference Lodging</a></li>
-									<li><a href="http://texassymposium.org/files/TexasSymposiumAgenda_2016.pdf">Conference Program</a></li>
+									<li><a href="http://www.profdong.com/WMCS/" target="_blank">Registration</a></li>
+									<li><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></li>
+									<li><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium^wcocy%60TSGTSGA%60115.00%60USD%60false%603%603/30/16%604/2/16%603/9/16&amp;app=resvlink&amp;stop_mobi=yes" target="_blank">Conference Lodging</a></li>
+									<li><a href="http://texassymposium.org/files/TexasSymposiumAgenda_2016.pdf" target="_blank">Conference Program</a></li>
 								</ul>
 							</section>
 							<section class="3u 6u$(narrower) 12u$(mobilep)">
 								<h3>More Information</h3>
 								<ul class="links">
-									<li><a href="http://www.baylor.edu/">Baylor University</a></li>
-									<li><a href="http://www.waco-texas.com/">Waco, Texas</a></li>
-									<li><a href="http://www.texasoutside.com/topten/waco.html">Things to do in Waco</a></li>
+									<li><a href="http://www.baylor.edu/" target="_blank">Baylor University</a></li>
+									<li><a href="http://www.waco-texas.com/" target="_blank">Waco, Texas</a></li>
+									<li><a href="http://www.texasoutside.com/topten/waco.html" target="_blank">Things to do in Waco</a></li>
 								</ul>
 							</section>
 							<section class="6u 12u(narrower)">
