--- a/AuthorToolkit.html
+++ b/AuthorToolkit.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Two Sidebar - Arcana by HTML5 UP</title>
+		<link rel="icon"  type="image/png" href="images/TxSymposiumLogo.png"/>
+		<title>Texas Symposium</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -31,17 +32,17 @@
 									<a href="Program.html">Conference Program</a>
 									<ul>
 										<li><a href="Program.html">Program &amp; Events</a></li>
-										<li><a href="#">Schedule</a></li>
-										<li><a href="#">Plenary Speakers</a></li>
+										<li><a href="Schedule.html">Schedule</a></li>
+										<li><a href="Speakers.html">Plenary Speakers</a></li>
 										<li><a href="SteeringCommittee.html">Steering Committee</a></li>
-										<li><a href="#">Photo Gallery</a></li>
+										<li><a href="PhotoGallery.html">Photo Gallery</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Author Toolkit</a></li>
-								<li><a href="right-sidebar.html">Registration</a></li>
-								<li class="current"><a href="two-sidebar.html">Travel &amp; Stay</a></li>
+								<li class="current"><a href="AuthorToolkit.html">Author Toolkit</a></li>
+								<li><a href="Registration.html">Registration</a></li>
+								<li><a href="Travel-Stay.html">Travel &amp; Stay</a></li>
 								<li><a href="Sponsors.html">Sponsors</a></li>
-								<li><a href="no-sidebar.html">Contact Us</a></li>
+								<li><a href="Contact.html">Contact Us</a></li>
 							</ul>
 						</nav>
 
@@ -51,10 +52,10 @@
 				<section class="wrapper style1">
 					<div class="container">
 						<div class="row 200%">
-							<div class="3u 12u(narrower)">
-								<div id="sidebar1">
+							<div class="4u 12u(narrower)">
+								<div id="sidebar">
 
-									<!-- Sidebar 1 -->
+									<!-- Sidebar -->
 
 										<section>
 											<h3>Just a Subheading</h3>
@@ -69,11 +70,11 @@
 										<section>
 											<h3>Another Subheading</h3>
 											<ul class="links">
-												<li><a href="#">Amet turpis, feugiat sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit lectus</a></li>
-												<li><a href="#">Semper mod quis eget dolore</a></li>
-												<li><a href="#">Consequat lorem phasellus</a></li>
-												<li><a href="#">Amet turpis feugiat amet</a></li>
+												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
+												<li><a href="#">Ornare in hendrerit in lectus</a></li>
+												<li><a href="#">Semper mod quis eget mi dolore</a></li>
+												<li><a href="#">Consequat etiam lorem phasellus</a></li>
+												<li><a href="#">Amet turpis, feugiat et sit amet</a></li>
 												<li><a href="#">Semper mod quisturpis nisi</a></li>
 											</ul>
 											<footer>
@@ -83,15 +84,15 @@
 
 								</div>
 							</div>
-							<div class="6u 12u(narrower) important(narrower)">
+							<div class="8u  12u(narrower) important(narrower)">
 								<div id="content">
 
 									<!-- Content -->
 
 										<article>
 											<header>
-												<h2>Two Sidebar</h2>
-												<p>Yup. Two sidebars at the same time.</p>
+												<h2>Left Sidebar</h2>
+												<p>Sidebar on the left, content on the right.</p>
 											</header>
 
 											<span class="image featured"><img src="images/banner.jpg" alt="" /></span>
@@ -105,47 +106,19 @@
 											<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Maecenas ac quam risus, at tempus
 											justo. Sed dictum rutrum massa eu volutpat. Quisque vitae hendrerit sem. Pellentesque lorem felis,
 											ultricies a bibendum id, bibendum sit amet nisl. Mauris et lorem quam. Maecenas rutrum imperdiet
+											vulputate. Nulla quis nibh ipsum, sed egestas justo. Morbi ut ante mattis orci convallis tempor.
+											Etiam a lacus a lacus pharetra porttitor quis accumsan odio. Sed vel euismod nisi. Etiam convallis
 											rhoncus dui quis euismod. Maecenas lorem tellus, congue et condimentum ac, ullamcorper non sapien.
 											Donec sagittis massa et leo semper a scelerisque metus faucibus. Morbi congue mattis mi.
 											Phasellus sed nisl vitae risus tristique volutpat. Cras rutrum commodo luctus.</p>
 
 											<p>Phasellus odio risus, faucibus et viverra vitae, eleifend ac purus. Praesent mattis, enim
 											quis hendrerit porttitor, sapien tortor viverra magna, sit amet rhoncus nisl lacus nec arcu.
+											Suspendisse laoreet metus ut metus imperdiet interdum aliquam justo tincidunt. Mauris dolor urna,
+											fringilla vel malesuada ac, dignissim eu mi. Praesent mollis massa ac nulla pretium pretium.
 											Maecenas tortor mauris, consectetur pellentesque dapibus eget, tincidunt vitae arcu.
 											Vestibulum purus augue, tincidunt sit amet iaculis id, porta eu purus.</p>
 										</article>
-
-								</div>
-							</div>
-							<div class="3u 12u(narrower)">
-								<div id="sidebar2">
-
-									<!-- Sidebar 2 -->
-
-										<section>
-											<h3>Another Subheading</h3>
-											<ul class="links">
-												<li><a href="#">Amet turpis, feugiat sit amet</a></li>
-												<li><a href="#">Ornare in hendrerit lectus</a></li>
-												<li><a href="#">Semper mod quis eget dolore</a></li>
-												<li><a href="#">Consequat lorem phasellus</a></li>
-												<li><a href="#">Amet turpis feugiat amet</a></li>
-												<li><a href="#">Semper mod quisturpis nisi</a></li>
-											</ul>
-											<footer>
-												<a href="#" class="button">More Random Links</a>
-											</footer>
-										</section>
-
-										<section>
-											<h3>Just a Subheading</h3>
-											<p>Phasellus quam turpis, feugiat sit amet ornare in, hendrerit in lectus.
-											Praesent semper mod quis eget mi. Etiam eu ante risus. Aliquam erat volutpat.
-											Aliquam luctus et mattis lectus sit amet pulvinar. Nam turpis et nisi etiam.</p>
-											<footer>
-												<a href="#" class="button">Continue Reading</a>
-											</footer>
-										</section>
 
 								</div>
 							</div>
@@ -158,27 +131,20 @@
 					<div class="container">
 						<div class="row">
 							<section class="3u 6u(narrower) 12u$(mobilep)">
-								<h3>Links to Stuff</h3>
+								<h3>Quick Links</h3>
 								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
+									<li><a href="http://www.profdong.com/WMCS/" target="_blank">Registration</a></li>
+									<li><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></li>
+									<li><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium^wcocy%60TSGTSGA%60115.00%60USD%60false%603%603/30/16%604/2/16%603/9/16&amp;app=resvlink&amp;stop_mobi=yes" target="_blank">Conference Lodging</a></li>
+									<li><a href="http://texassymposium.org/files/TexasSymposiumAgenda_2016.pdf" target="_blank">Conference Program</a></li>
 								</ul>
 							</section>
 							<section class="3u 6u$(narrower) 12u$(mobilep)">
-								<h3>More Links to Stuff</h3>
+								<h3>More Information</h3>
 								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
+									<li><a href="http://www.baylor.edu/" target="_blank">Baylor University</a></li>
+									<li><a href="http://www.waco-texas.com/" target="_blank">Waco, Texas</a></li>
+									<li><a href="http://www.texasoutside.com/topten/waco.html" target="_blank">Things to do in Waco</a></li>
 								</ul>
 							</section>
 							<section class="6u 12u(narrower)">
@@ -221,7 +187,7 @@
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>© 2016 Texas Symposium. All rights reserved.</li>
 							</ul>
 						</div>
 
