--- a/Registration.html
+++ b/Registration.html
@@ -6,7 +6,8 @@
 -->
 <html>
 	<head>
-		<title>Right Sidebar - Arcana by HTML5 UP</title>
+		<link rel="icon"  type="image/png" href="images/TxSymposiumLogo.png"/>
+		<title>Texas Symposium</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		<!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -31,17 +32,17 @@
 									<a href="Program.html">Conference Program</a>
 									<ul>
 										<li><a href="Program.html">Program &amp; Events</a></li>
-										<li><a href="#">Schedule</a></li>
-										<li><a href="#">Plenary Speakers</a></li>
+										<li><a href="Schedule.html">Schedule</a></li>
+										<li><a href="Speakers.html">Plenary Speakers</a></li>
 										<li><a href="SteeringCommittee.html">Steering Committee</a></li>
-										<li><a href="#">Photo Gallery</a></li>
+										<li><a href="PhotoGallery.html">Photo Gallery</a></li>
 									</ul>
 								</li>
-								<li><a href="left-sidebar.html">Author Toolkit</a></li>
-								<li class="current"><a href="right-sidebar.html">Registration</a></li>
-								<li><a href="two-sidebar.html">Travel &amp; Stay</a></li>
+								<li><a href="AuthorToolkit.html">Author Toolkit</a></li>
+								<li class="current"><a href="Registration.html">Registration</a></li>
+								<li><a href="Travel-Stay.html">Travel &amp; Stay</a></li>
 								<li><a href="Sponsors.html">Sponsors</a></li>
-								<li><a href="no-sidebar.html">Contact Us</a></li>
+								<li><a href="Contact.html">Contact Us</a></li>
 							</ul>
 						</nav>
 
@@ -130,27 +131,20 @@
 					<div class="container">
 						<div class="row">
 							<section class="3u 6u(narrower) 12u$(mobilep)">
-								<h3>Links to Stuff</h3>
+								<h3>Quick Links</h3>
 								<ul class="links">
-									<li><a href="#">Mattis et quis rutrum</a></li>
-									<li><a href="#">Suspendisse amet varius</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan dolor</a></li>
-									<li><a href="#">Mattis rutrum accumsan</a></li>
-									<li><a href="#">Suspendisse varius nibh</a></li>
-									<li><a href="#">Sed et dapibus mattis</a></li>
+									<li><a href="http://www.profdong.com/WMCS/" target="_blank">Registration</a></li>
+									<li><a href="https://cmt3.research.microsoft.com/TXWMCS2017/" target="_blank">Submit Paper</a></li>
+									<li><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium^wcocy%60TSGTSGA%60115.00%60USD%60false%603%603/30/16%604/2/16%603/9/16&amp;app=resvlink&amp;stop_mobi=yes" target="_blank">Conference Lodging</a></li>
+									<li><a href="http://texassymposium.org/files/TexasSymposiumAgenda_2016.pdf" target="_blank">Conference Program</a></li>
 								</ul>
 							</section>
 							<section class="3u 6u$(narrower) 12u$(mobilep)">
-								<h3>More Links to Stuff</h3>
+								<h3>More Information</h3>
 								<ul class="links">
-									<li><a href="#">Duis neque nisi dapibus</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum accumsan sed</a></li>
-									<li><a href="#">Mattis et sed accumsan</a></li>
-									<li><a href="#">Duis neque nisi sed</a></li>
-									<li><a href="#">Sed et dapibus quis</a></li>
-									<li><a href="#">Rutrum amet varius</a></li>
+									<li><a href="http://www.baylor.edu/" target="_blank">Baylor University</a></li>
+									<li><a href="http://www.waco-texas.com/" target="_blank">Waco, Texas</a></li>
+									<li><a href="http://www.texasoutside.com/topten/waco.html" target="_blank">Things to do in Waco</a></li>
 								</ul>
 							</section>
 							<section class="6u 12u(narrower)">
@@ -193,7 +187,7 @@
 					<!-- Copyright -->
 						<div class="copyright">
 							<ul class="menu">
-								<li>&copy; Untitled. All rights reserved</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+								<li>© 2016 Texas Symposium. All rights reserved.</li>
 							</ul>
 						</div>
 
