Fixed iframe issue

--- a/Registration.html
+++ b/Registration.html
@@ -55,8 +55,9 @@
 							<article>
 								<header>
 									<!-- <i class="icon major round-register-img"></i> -->
+										<p><a href="http://www.profdong.com/WMCS/" target="_blank">2017 Conference Registration </a></p>
 								</header>
-								<iframe src="http://www.profdong.com/WMCS/" style="border:2px solid black;" height="1000" width="1500"></iframe>
+								<iframe src="http://www.profdong.com/WMCS/" style="border:2px solid black;" height="1000" width="1500">&nbsp;</iframe>
 							</article>
 						</div>
 					</div>
