--- a/Travel-Stay.html
+++ b/Travel-Stay.html
@@ -54,19 +54,20 @@
 							<div class="row">
 								<section class="6u 12u(narrower)">
 									<div class="box post">
-										<a href="#" class="image left"><img src="images/pic01.jpg" alt="" /></a>
+										<a href="#" class="image left"><img src="images/airport.png" alt="" /></a>
 										<div class="inner">
-											<h3>The First Thing</h3>
-											<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+											<h3>Airports</h3>
+											<p><a href="http://www.waco-texas.com/airport/" target="_blank">Waco Airport</a><br/><br/>
+											<a href="http://www.dfwairport.com/" target="_blank">DFW Airport</a></p>
 										</div>
 									</div>
 								</section>
 								<section class="6u 12u(narrower)">
 									<div class="box post">
-										<a href="#" class="image left"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="#" class="image left"><img src="images/maps.png" alt="" /></a>
 										<div class="inner">
-											<h3>The Second Thing</h3>
-											<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+											<h3>Navigation</h3>
+											<p><a href="https://www.google.com/maps/place/Baylor+University/@31.549841,-97.1165033,17z/data=!3m1!4b1!4m5!3m4!1s0x864f826a49c7e691:0x636ad356faf7d7dd!8m2!3d31.549841!4d-97.1143146" target="_blank">1301 S University Parks Dr, Waco, TX 76798</a></p>
 										</div>
 									</div>
 								</section>
@@ -74,19 +75,19 @@
 							<div class="row">
 								<section class="6u 12u(narrower)">
 									<div class="box post">
-										<a href="#" class="image left"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="#" class="image left"><img src="images/parking.jpg" alt="" /></a>
 										<div class="inner">
-											<h3>The Third Thing</h3>
-											<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+											<h3>Parking</h3>
+											<p><a href="files/Parking.pdf" target="_blank">Parking Permit Information</a></p>
 										</div>
 									</div>
 								</section>
 								<section class="6u 12u(narrower)">
 									<div class="box post">
-										<a href="#" class="image left"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="#" class="image left"><img src="images/lodging.jpg" alt="" /></a>
 										<div class="inner">
-											<h3>The Fourth Thing</h3>
-											<p>Duis neque nisi, dapibus sed mattis et quis, nibh. Sed et dapibus nisl amet mattis, sed a rutrum accumsan sed. Suspendisse eu.</p>
+											<h3>Lodging</h3>
+											<p><a href="http://www.marriott.com/meeting-event-hotels/group-corporate-travel/groupCorp.mi?resLinkData=Texas%20Symposium^wcocy%60TSGTSGA%60115.00%60USD%60false%603%603/30/16%604/2/16%603/9/16&amp;app=resvlink&amp;stop_mobi=yes" target="_blank">Conference Lodging</a></p>
 										</div>
 									</div>
 								</section>
@@ -147,7 +148,6 @@
 						<ul class="icons">
 							<li><a href="#" class="icon fa-twitter"><span class="label">Twitter</span></a></li>
 							<li><a href="#" class="icon fa-facebook"><span class="label">Facebook</span></a></li>
-							<li><a href="#" class="icon fa-github"><span class="label">GitHub</span></a></li>
 							<li><a href="#" class="icon fa-linkedin"><span class="label">LinkedIn</span></a></li>
 							<li><a href="#" class="icon fa-google-plus"><span class="label">Google+</span></a></li>
 						</ul>
